8252476: as_Worker_thread() doesn't check what it intends

Co-authored-by: David Holmes <dholmes@openjdk.org>
Reviewed-by: iklam, kbarrett